app-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: app
  name: app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
      version: second
  template:
    metadata:
      labels:
        run: app
        version: second
    spec:
      containers:
      - name: app
        image: "docker.io/keerthana2408/kubernetes:kub"
        ports:
        - containerPort: 3000
