app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    run: app
    version: 0.0.1
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8087



#######


apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    run: app
    version: second
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
    

    To switch  the traffic to version 2 of the application
    ## kubectl apply -f app-service.yaml 
    
    ##kubectl apply -f app-v1.yml -f app-service-bg.yaml -f ingress.yml
