service1.yml
apiVersion: v1
kind: Service
metadata:
  name: ms1
spec:
  ports:
  - port: 80
    targetPort: 8087
  selector:
    app: ms1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms1
spec:
  selector:
    matchLabels:
      app: ms1
  replicas: 1
  template:
    metadata:
      labels:
        app: ms1
    spec:
      containers:
      - name: ms1
        image: docker.io/keerthana2408/kubernetes:kub
        #args:
        #- "-text=echo1"
        ports:
        - containerPort: 8087
